--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -207,7 +207,7 @@
 }
 
 .card-delivery {
-    background-image: url('/images/Cheese-Dip.avif');
+    background-image: url('/images/delivery-image.png');
 }
 
 /* Dark Gradient Overlay - Modified to be less intrusive at top */
